HelloUltraviolet/Fixtures/RejectedSource/SourceText/UnterminatedString/Source/Main.uv
//! Rejected lexical specimen for an unterminated string literal.

public procedure unterminatedStringReference() -> i32 {
    let text: string@View = "unterminated
    return 0
}
